# seamles_smb

./: .clang-format  .gitignore  .gitmodules  ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.f24f0e1  DbgPrint.cpp  DbgPrint.h  RunWideployQt.vcxproj  RunWideployQt.vcxproj.filters  WinSec.cpp  WinSec.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  consolehandler.cpp  consolehandler.h  context.h  dokan_mirror.sln  dokan_mirror.vcxproj  dokan_mirror.vcxproj.filters  filemount.cpp  filemount.h  filenode.cpp  filenode.h  fileops.cpp  fileops.h  filesecurity.cpp  filesecurity.h  filesecutiryprocessor.cpp  filesecutiryprocessor.h  globals.cpp  globals.h  mirror.cpp  nodes.h  ramdiskmanager.cpp  ramdiskmanager.h  seamless.cppcheck  seamless_smb.sln  (+3 more)
backup/: CMakeLists.txt
include/dokan/: fileinfo.h
lib/: dokannp2.lib  libboost_atomic-vc142-mt-gd-x32-1_77.lib  libboost_atomic-vc142-mt-gd-x64-1_77.lib  libboost_atomic-vc142-mt-s-x32-1_77.lib  libboost_atomic-vc142-mt-s-x64-1_77.lib  libboost_atomic-vc142-mt-sgd-x32-1_77.lib  libboost_atomic-vc142-mt-sgd-x64-1_77.lib  libboost_atomic-vc142-mt-x32-1_77.lib  libboost_atomic-vc142-mt-x64-1_77.lib  libboost_chrono-vc142-mt-s-x32-1_77.lib  libboost_chrono-vc142-mt-s-x64-1_77.lib  libboost_chrono-vc142-mt-sgd-x32-1_77.lib  libboost_chrono-vc142-mt-sgd-x64-1_77.lib  libboost_date_time-vc142-mt-s-x32-1_77.lib  libboost_date_time-vc142-mt-s-x64-1_77.lib  libboost_date_time-vc142-mt-sgd-x32-1_77.lib  libboost_date_time-vc142-mt-sgd-x64-1_77.lib  libboost_filesystem-vc142-mt-s-x32-1_77.lib  libboost_filesystem-vc142-mt-s-x64-1_77.lib  libboost_filesystem-vc142-mt-x32-1_77.lib  libboost_filesystem-vc142-mt-x64-1_77.lib  libboost_serialization-vc142-mt-s-x32-1_77.lib  libboost_serialization-vc142-mt-x32-1_77.lib  libboost_serialization-vc142-mt-x64-1_77.lib  libboost_thread-vc142-mt-gd-x32-1_77.lib  libboost_thread-vc142-mt-gd-x64-1_77.lib  libboost_thread-vc142-mt-s-x32-1_77.lib  libboost_thread-vc142-mt-s-x64-1_77.lib  libboost_thread-vc142-mt-sgd-x32-1_77.lib  libboost_thread-vc142-mt-sgd-x64-1_77.lib  libboost_thread-vc142-mt-x32-1_77.lib  libboost_thread-vc142-mt-x64-1_77.lib  libboost_timer-vc142-mt-s-x32-1_77.lib  libboost_timer-vc142-mt-s-x64-1_77.lib  libboost_timer-vc142-mt-sgd-x32-1_77.lib  libboost_timer-vc142-mt-sgd-x64-1_77.lib  libboost_wserialization-vc142-mt-s-x32-1_77.lib  libboost_wserialization-vc142-mt-s-x64-1_77.lib  libboost_wserialization-vc142-mt-x32-1_77.lib  libboost_wserialization-vc142-mt-x64-1_77.lib
lib/cmake/boost_atomic-1.77.0/: boost_atomic-config.cmake
lib/cmake/boost_chrono-1.77.0/: boost_chrono-config.cmake
lib/cmake/boost_container-1.77.0/: boost_container-config.cmake
lib/cmake/boost_context-1.77.0/: boost_context-config.cmake
lib/cmake/boost_contract-1.77.0/: boost_contract-config.cmake
lib/cmake/boost_coroutine-1.77.0/: boost_coroutine-config.cmake
lib/cmake/boost_date_time-1.77.0/: boost_date_time-config.cmake
lib/cmake/boost_exception-1.77.0/: boost_exception-config.cmake
lib/cmake/boost_fiber-1.77.0/: boost_fiber-config.cmake
lib/cmake/boost_fiber_numa-1.77.0/: boost_fiber_numa-config.cmake
lib/cmake/boost_filesystem-1.77.0/: boost_filesystem-config.cmake
lib/cmake/boost_graph-1.77.0/: boost_graph-config.cmake
lib/cmake/boost_graph_parallel-1.77.0/: boost_graph_parallel-config.cmake
lib/cmake/boost_headers-1.77.0/: boost_headers-config.cmake
lib/cmake/boost_iostreams-1.77.0/: boost_iostreams-config.cmake  libboost_iostreams-variant-vc142-mt-s-x32-1_77-static.cmake  libboost_iostreams-variant-vc142-mt-sgd-x32-1_77-static.cmake
lib/cmake/boost_json-1.77.0/: boost_json-config.cmake
lib/cmake/boost_locale-1.77.0/: boost_locale-config.cmake
lib/cmake/boost_log-1.77.0/: boost_log-config.cmake
lib/cmake/boost_log_setup-1.77.0/: boost_log_setup-config.cmake
lib/cmake/boost_math_c99-1.77.0/: boost_math_c99-config.cmake
lib/cmake/boost_math_c99f-1.77.0/: boost_math_c99f-config.cmake
rtl/: CMakeLists.txt  appverifier.c
seamless_smb_common/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  common.cpp  common.h  seamless_smb_common.sln  seamless_smb_common.vcxproj  seamless_smb_common.vcxproj.filters
seamless_smb_lib/: CMakeLists.txt  DbgPrint.cpp  WinSec.cpp  WinSec.h  cache.cpp  cache.h  cmake_install.cmake  context.h  filemount.cpp  filenode.cpp  filenode.h  fileops.cpp  fileops.h  filesecurity.cpp  filesecurity.h  nodes.h  processinfo.cpp  processinfo.h  seamless_smb_lib.vcxproj  seamless_smb_lib.vcxproj.filters  seamless_smb_lib_export.h  securityprocessor.cpp
seamless_smb_lib/include/: DbgPrint.h  filemount.h  globals.h
seamless_smb_service/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  daemon.cpp  daemon.h  logger.cpp  logger.h  main.cpp  seamless_smb_service.cpp  seamless_smb_service.h  seamless_smb_service.sln  seamless_smb_service.vcxproj  seamless_smb_service.vcxproj.filters  seamless_smb_service_lib.vcxproj  seamless_smb_service_lib.vcxproj.filters  seamless_smb_service_test.vcxproj  seamless_smb_service_test.vcxproj.filters  server.cpp  server.h  servicetestmain.cpp  socket.cpp  socket.h
seamless_smb_service/process/: CMakeLists.txt  dokanrunner.cpp  dokanrunner.h  logger.cpp  logger.h  main.cpp  otherlogger.cpp  otherlogger.h
seamless_smb_service_controller/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  StackedTextEditor.qml  StackedTextField.qml  applicationui.cpp  applicationui.h  client.cpp  client.h  cmake_install.cmake  editDialog.qml  main.cpp  main.qml  mounteditor.cpp  mounteditor.h  mountlistmodel.cpp  mountlistmodel.h  qml.qrc  seamless_smb_service_controller.sln  seamless_smb_service_controller.vcxproj  seamless_smb_service_controller.vcxproj.filters  socket.cpp  socket.h
seamless_smb_service_tester/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  main.cpp  seamless_smb_service_tester.sln  seamless_smb_service_tester.vcxproj  seamless_smb_service_tester.vcxproj.filters
(+28 files in other folders)
